# gofetch-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/gofetch/: __init__.py  actor.py  client.py  constants.py  dataset.py  exceptions.py  http.py  log.py  run.py  types.py  webhook.py  webhook_client.py
src/gofetch/scrapers/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_actor.py  test_client.py  test_http.py  test_log.py  test_parity.py  test_run.py  test_scrapers.py  test_types.py  test_webhook.py  test_webhook_client.py
tests/e2e/: __init__.py  config.py  conftest.py  test_batch.py  test_scraping.py  test_webhook_e2e.py
